[package]
name = "kvs"
version = "0.1.0"
authors = ["triplewy <triplewy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features=["yaml"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
test = false

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
test = false
doctest = false