[package]
name = "kvs"
version = "0.1.0"
authors = ["triplewy <triplewy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features=["yaml"]}
failure = "0.1.6"
failure_derive = "0.1.6"
serde = "1.0.104"
serde_json = "1.0.44"
tempfile = "3.1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
test = false
doctest = false