[package]
name = "kvs"
version = "0.1.0"
authors = ["triplewy <triplewy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features=["yaml"]}
failure = "0.1.6"
failure_derive = "0.1.6"
serde = "1.0.104"
serde_json = "1.0.44"
tempfile = "3.1.0"
sled = "0.30.1"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
num_cpus = "1.11.1"
crossbeam-channel = "0.4.0"
rayon = "1.3.0"
rayon-core = "1.7.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.0"
criterion-plot = "0.4.0"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[lib]
test = false

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"
test = false
doctest = false

[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"
test = false
doctest = false

[[bench]]
name = "bench"
path = "benches/benches.rs"
harness = false

[[bench]]
name = "threads"
path = "benches/threads.rs"
harness = false